[package]
name = "tls-utils"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tls"
path = "src/main.rs"

[dependencies]
asn1-rs = "0.7.1"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
rcgen = { version = "0.14.6", features = ["aws_lc_rs"] }
rsa = "0.9.9"
x509-parser = "0.18.0"
